# ads1298-rs

./: Cargo.toml  LICENSE  README.md
src/driver/: initialization.rs  mod.rs  operator.rs  stream_reader.rs
src/driver/registers/: data.rs  mod.rs
